# pypmanager

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt  requirements_test.txt  setup.cfg  setup.py  transactions.csv
.devcontainer/: .devcontainer.json  Dockerfile  Dockerfile.dev  devcontainer.json
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: cache-cleanup.yml  ci.yaml  ci.yml  codeql.yml  pre-commit-update.yml  publish-pypi.yml  publish_docker_package.yml  release-drafter.yml
config/: market_data.yaml
data/: .gitignore  README.md
data-demo/: market_data.csv  other-demo.csv
frontend/: .eslintrc.yml  .gitignore  .yarnrc.yml  README.md  eslint.config.js  eslint.config.ts  index.html  package.json  playwright.config.ts  tsconfig.json  vite.config.ts  webpack.config.js
frontend/src/: App.tsx  Constant.tsx  index.tsx
frontend/src/Api/: Const.tsx  index.tsx
frontend/src/GenericComponents/: BasicTable.tsx  StandardCard.tsx  index.tsx
frontend/src/Theme/: Palette.tsx  StandardTheme.tsx  index.tsx
frontend/src/Utils/: data.tsx  date.tsx  index.tsx  numbers.tsx
frontend/src/components/: ChartPriceHistory.tsx  NavigationBar.tsx  TableAllTransaction.tsx  TableCurrentPortfolio.tsx  TableGeneralLedger.tsx  TableHistoricalPortfolio.tsx  TableIncomeStatement.tsx  TableMarketDataOverview.tsx  common.tsx  index.tsx
frontend/static/assets/: apollo-DoQ0BhpS.js  index-CfnEs66h.js  mui-CanEAvN4.js  vendor-DDo3dgcC.js
frontend/templates/: app.html  common_css.html  current_portfolio.html  footnote.html  general_ledger.html  historical_portfolio.html  index.html  index_template.html  navigation.html
frontend/tests/: baseTest.ts  playwright.config.ts  server.js
frontend/tests/test-files/: test.spec.ts
frontend/webpack/: common.tsx  config.dev.watch.tsx  config.production.hass-addon.tsx  config.production.tsx  playwright.tsx
prof/: combined.prof  test_async_get_last_n_quarters.prof  test_buy_sell_sequence.prof  test_buy_transaction.prof  test_dividend_transaction.prof  test_get_previous_quarter[report_date0-expected_date0].prof  test_get_previous_quarter[report_date1-expected_date1].prof  test_get_previous_quarter[report_date2-expected_date2].prof  test_get_previous_quarter[report_date3-expected_date3].prof  test_interest_transaction.prof  test_sell_transaction.prof
pypmanager/: __init__.py  __main__.py  const.py  data_loader.py  error.py  holding.py  market_data_loader.py  market_price.py  portfolio.py  security.py  settings.py  transaction_loader.py  utils.py
pypmanager/analytics/: __init__.py  calculate_aggregates.py  helpers.py  holding.py  portfolio.py  security.py  utils.py
pypmanager/api/: __init__.py  scheduler.py  server.py
pypmanager/api/graphql/: __init__.py  models.py  query.py
pypmanager/configuration/: market_data.yaml  security.yaml
pypmanager/cron/: __init__.py  __main__.py
pypmanager/database/: __init__.py  daily_portfolio_holding.py  helpers.py  market_data.py  security.py  utils.py
pypmanager/general_ledger/: __init__.py  calculate_aggregates.py  helpers.py  ledger.py  pandas_algorithm.py  shared.py  transaction_macro.py  transation_macro.py
pypmanager/helpers/: __init__.py  chart.py  income_statement.py  market_data.py  portfoilio.py  portfolio.py  security.py  security_holding_history.py  transaction.py
pypmanager/ingest/: __init__.py
pypmanager/ingest/market_data/: __init__.py  avanza.py  base_loader.py  const.py  ft.py  helpers.py  levler.py  models.py  morningstar.py  nasdaq.py
pypmanager/ingest/transaction/: __init__.py  avanza.py  base_loader.py  const.py  generic.py  helpers.py  lysa.py  pandas_algorithm.py  pareto_securities.py  transaction_registry.py
pypmanager/loader_market_data/: __init__.py  avanza.py  base_loader.py  const.py  ft.py  models.py  morningstar.py  shb_fonder.py  utils.py
pypmanager/loader_transaction/: __init__.py  avanza.py  base_loader.py  calculate_aggregates.py  calculate_aggregates_v2.py  common.py  const.py  general_ledger.py  generic.py  helpers.py  lysa.py  misc.py  utils.py
pypmanager/loaders/: __init__.py  avanza.py  base_loader.py  const.py  ft.py  models.py  shb_fonder.py  utils.py
pypmanager/reports/: __init__.py  cmd_line.py
pypmanager/server/: __init__.py  const.py  templates.py
pypmanager/server/graphql/: __init__.py  models.py  query.py
pypmanager/server/templates/: current_portfolio.html  general_ledger.html  historical_portfolio.html  navigation.html
pypmanager/utils/: dt.py
script/: bootstrap.sh  calc_security.py  install-frontend.sh  install.sh  playwright-run.sh  playwright-setup.sh  run-playwright.sh  setup-playwright.sh  setup.sh
supervisord/: 01-fastapi.conf  supervisord.conf
tests/: __init__.py  conftest.py  test.sqllite  test_a.py  test_calculate_aggregates.py  test_data_loader.py  test_database.sqllite  test_general_ledger.py  test_holding.py  test_loader_market_data.py  test_server.py  test_settings.py  test_templates.py
tests/analytics/: __init__.py  test_helpers.py  test_holding.py
tests/api/: __init__.py  test_endpoint.py  test_graphql.py  test_scheduler.py  test_server.py
tests/database/: __init__.py  test_daily_portfolio_holding.py  test_market_data.py  test_security.py  test_utils.py
tests/fixtures/: avanza.csv  lysa.csv  market_data.csv  other.csv
tests/fixtures/market_data/: mstar_shb.xlsx  other.csv
tests/fixtures/transactions/: avanza.csv  other.csv  pareto.csv
tests/general_ledger/: __init__.py  test_calculate_aggregates.py  test_helpers.py  test_ledger.py  test_pandas_algorithm.py  test_transaction_macro.py
tests/helpers/: test_chart.py  test_income_statement.py  test_market_data.py  test_portfolio.py  test_security.py  test_security_holding_history.py  test_transaction.py
tests/ingest/: __init__.py
tests/ingest/market_data/: __init__.py  (+7 more)
tests/loader_transaction/: __init__.py  test_avanza.py  test_base_loader.py  test_generic.py  test_lysa.py
tests/server/: test_endpoint.py  test_templates.py
tests/utils/: test_dt.py
(+31 files in other folders)
