[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pylocalpmanager"
requires-python = ">=3.13"
dynamic = ['version']
dependencies    = [
  "aiosqlite==0.21.0",
  "apscheduler==3.11.1",
  "colorlog==6.10.1",
  "fastapi==0.121.1",
  "lxml==6.0.2",
  "openpyxl==3.1.5",
  "pandas==2.3.3",
  "pandas_market_calendars==5.1.3",
  "pyarrow==22.0.0",
  "pydantic==2.12.3",
  "pydantic-settings==2.12.0",
  "requests==2.32.5",
  "strawberry_graphql[debug-server]==0.284.2",
  "sqlalchemy[asyncio]==2.0.44",
  "uvicorn[standard]==0.38.0",
]

[project.optional-dependencies]
test = [
  "asgiref==3.10.0",
  "httpx==0.28.1",
  "mypy==1.17.0",
  "pre-commit==4.5.0",
  "pylint==4.0.2",
  "pytest==8.4.2",
  "pytest-asyncio==1.2.0",
  "pytest-cov==7.0.0",
  "pytest-freezer==0.4.9",
  "pytest-profiling==1.8.1",
  "pytest-timeout==2.4.0",
  "ruff==0.14.4",
  "types_PyYAML==6.0.12.20250915",
  "types_requests==2.32.4.20250913",
]

[tool.setuptools]
platforms = ["any"]
zip-safe = false

[tool.setuptools.dynamic]
version = {file = "pypmanager/VERSION"}

[tool.setuptools.packages.find]
exclude = ["tests", "tests*"]

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
filterwarnings = [
    "ignore:'typing.ByteString' is deprecated and slated for removal in Python 3.14",
]

[tool.pylint.MASTER]
py-version = "3.13"
ignore = [
    "tests",
]
# Use a conservative default here; 2 should speed up most setups and not hurt
# any too bad. Override on command line as appropriate.
jobs = 2
load-plugins = [
    "pylint.extensions.code_style",
    "pylint.extensions.typing",
]
persistent = false

extension-pkg-whitelist = "pydantic"

[tool.pylint.BASIC]
good-names = [
    "_",
    "df", # DataFrame
    "i",
    "j",
]

[tool.pylint.REPORTS]
score = false

[tool.pylint.TYPECHECK]
ignored-classes = [
    "_CountingAttr",  # for attrs
]
mixin-class-rgx = ".*[Mm]ix[Ii]n"

[tool.pylint.FORMAT]
expected-line-ending-format = "LF"

# Regexp for a line that is allowed to be longer than the limit.
ignore-long-lines = '^\s*(# )?<?https?://\S+>?$'

[tool.pylint."MESSAGES CONTROL"]
disable = [
  "too-few-public-methods",
  "logging-fstring-interpolation",
  "too-many-statements",
  "too-many-locals",
  "too-many-branches",
  "too-many-public-methods",
  "too-many-instance-attributes",
]

[tool.mypy]
python_version = "3.13"
show_error_codes = true
follow_imports = "silent"
ignore_missing_imports = true
strict_equality = true
warn_incomplete_stub = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unused_ignores = true
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_return_any = true
warn_unreachable = true
strict = true

plugins = "pydantic.mypy"

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true

[tool.ruff]
exclude = []

target-version = "py313"

lint.select = [
  "ALL"
]

line-length = 88

lint.ignore = [# One of these is to be disabled..
          "D213", # See https://github.com/charliermarsh/ruff/issues/2281
          #"D212", # See https://github.com/charliermarsh/ruff/issues/2281

          "D203", # See https://github.com/charliermarsh/ruff/issues/2281
          #"D211", # See https://github.com/charliermarsh/ruff/issues/2281

          "ISC001",  # Recommended disable
          "G004",  # Logging statement uses f-string
          "COM812",  # Trailing comma missing
]

[tool.ruff.lint.flake8-pytest-style]
fixture-parentheses = false

[tool.ruff.lint.pydocstyle]
convention = 'pep257'

[tool.ruff.lint.isort]
# will group `import x` and `from x import` of the same module.
combine-as-imports = true
force-sort-within-sections = true
forced-separate = [
  "tests",
]
known-first-party = [
  "pypmanager",
  "tests",
]

[tool.ruff.lint.per-file-ignores]


"tests/*" = [
 "S101",  # Use of `assert` detected
 # This rule is needed in tests so that we can compare against values, eg 150.0
 "PLR2004",  # Magic value used in comparison, consider replacing with a constant variable
 "FBT001",  # Boolean-typed positional argument in function definition
]

[tool.coverage.run]
branch = true

source = ['pypmanager']

relative_files = true

omit = [
  "const.py",  # We can ignore all constants
  "__main__.py",
  "__init__.py",
  "pypmanager/error.py",
]

[tool.coverage.report]
exclude_lines = [
    # Have to re-enable the standard pragma
    "pragma: no cover",
    # Don't complain about missing debug-only code:
    "def __repr__",
    # Don't complain if tests don't hit defensive assertion code:
    "raise AssertionError",
    "raise NotImplementedError",
    # TYPE_CHECKING and @overload blocks are never executed during pytest run
    "if TYPE_CHECKING:",
    "@overload",
]
